--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,11 +4,18 @@
   <title>Ketonormal - {% block title %}{% endblock %}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+ 
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  
 </head>
+<style>
+body {
+	/* Margin bottom by footer height */
+	margin-bottom: 60px;
+  }
+</style>
 {% with flash_messages = get_flashed_messages() %}
   {% if flash_messages %}
 <div>  
