--- a/templates/submitlabs.html
+++ b/templates/submitlabs.html
@@ -12,54 +12,79 @@
 	</li>
 {% endblock %}
 {% block content %}
+<div class="py-5 text-center">
+    
+    <h3>Submit your lab values</h2>
+    
+  </div>
+  <div class="col-md-3 order-md-1">
 <form action="/result" method="POST">
-    <header>
-        <h3>Submit your lab values</h3>
-    </header>
-    <p>
-        Give a name for this lab:<br>
-        <textarea name="lab_name" required rows="1" cols="50"></textarea>
-    </p>
+    <div class="col-md-6 mb-3"></div>
+    Give a name for this lab:<br>
+        
+        <input type="text" class="form-control" name="lab_name" required rows="1" cols="50">
+   <p></p>
+</div>
+<div class="col-md-3 mb-3">
     <p>
         <input type="radio" name="sex" required value="Male"> Male
         <input type="radio" name="sex" required value="Female"> Female
         <input type="radio" name="sex" required value="Unspecified"> Unspecified
     <p>
+    </div>
+    <div class="col-md-3 mb-3">
+        Age:<br>
     
-    Age:
-    <input type="number" required name="age"><br>
-    
-    <p>
-    What is your diet?:
+    <input type="number" class="form-control" required name="age">
+    </div>
+        <div class="col-md-3 mb-3">
+           
+            Diet:<br>
         <select required name="diet">
-        <option value="">Select Diet</option>
-        <option value="LCHF">LCHF (20g to 120g carbs)</option>
-        <option value="keto">Keto (less than 50g carbs)</option>
-        <option value="zero">Carnivore (aka zero carbs)</option>
+        <option class="form-control" value="">Select Diet</option>
+        <option class="form-control" value="LCHF">LCHF (20g to 120g carbs)</option>
+        <option class="form-control" value="keto">Keto (less than 50g carbs)</option>
+        <option class="form-control" value="zero">Carnivore (aka zero carbs)</option>
         </select>
-    <p>
-    Total hours water-only fasted before this test:
-    <input type="number" name="hours_fasted">
-    <p>
-    Units of measurement:
+    </div>
+    
+        <div class="col-md-3 mb-3">
+          
+            Total hours water-only fasted before this test:
+    <input type="number" class="form-control" name="hours_fasted">
+</div>
+   
+        <div class="col-md-3 mb-3">
+           
+            Units of measurement:
         <select required name="units">
         <option value="">Select Units</option>    
         <option value="usa">mg/dL (Common for USA)</option>
         <option value="int">mmol/L (Common for International)</option>
         </select>
+    </div>
     <p>
+        <div class="col-md-3 mb-3">
     Total Cholesterol: 
-        <input type="number" step="0.1" required min="0" max="1000" name="total">
+        <input type="number" class="form-control" step="0.1" required min="0" max="1000" name="total">
+    </div>
     <p>
+        <div class="col-md-3 mb-3">
     LDL Cholesterol: 
-        <input type="number" step="0.1" required min="0" max="1000" name="ldl">
+        <input type="number" class="form-control" step="0.1" required min="0" max="1000" name="ldl">
+    </div>
     <p>
+        <div class="col-md-3 mb-3">
     HDL Cholesterol: 
-        <input type="number" step="0.1" required min="0" max="1000" name="hdl"> 
+        <input type="number" class="form-control" step="0.1" required min="0" max="1000" name="hdl"> 
+    </div>
     <p>
+        <div class="col-md-3 mb-3">
     Triglycerides: 
-        <input type="number" step="0.1" required min="0" max="1000" name="triglyt"> 
-     <p>     
+        <input type="number" class="form-control" step="0.1" required min="0" max="1000" name="triglyt"> 
+    </div>
+     <p>    
+        <div class="col-md-3 mb-3"> 
         How's your health? Give a value or estimate of your CRP:
             <select required name="crp">
             <option value="">Select CRP</option>
@@ -67,8 +92,12 @@
             <option value="normal">Between 1-3, I'm feeling OK</option>
             <option value="higher">Over 3, I have some inflammation</option>
             </select>
+        </div>
         <p>
+            <div class="col-md-3 mb-3">
             <input type="submit" value="Submit"> <a href="/mypage">Back</a>
             <p>
+            </div>
     </form>
+  </div>
 {% endblock %}
