--- a/templates/forum.html
+++ b/templates/forum.html
@@ -22,6 +22,8 @@
 	<div class="row">
 		<div class="col-md-3 p-3 mb-3 bg-light rounded">
 		<h3><a href="/new">Start new conversation</a></h3>
+		<hr>
+			<h3><a href="/edit_posts">Edit posts</a></h3>
 		</div><!-- /.blog-post -->
   
 	  
