--- a/templates/query.html
+++ b/templates/query.html
@@ -41,7 +41,8 @@
     <div class="col-md-6 mb-3">
     Choose diet:
     <select required name="diet">
-        <option value="">Select Diet</option>
+        <option value="all">All</option>
+        <option value="ketozero">Keto + Zero</option>
         <option value="LCHF">LCHF (20g to 120g carbs)</option>
         <option value="keto">Keto (less than 50g carbs)</option>
         <option value="zero">Carnivore (aka zero carbs)</option>
