--- a/templates/submitlabs.html
+++ b/templates/submitlabs.html
@@ -42,9 +42,9 @@
             Diet:<br>
         <select required name="diet">
         <option class="form-control" value="">Select Diet</option>
-        <option class="form-control" value="LCHF">LCHF (20g to 120g carbs)</option>
-        <option class="form-control" value="keto">Keto (less than 50g carbs)</option>
-        <option class="form-control" value="zero">Carnivore (aka zero carbs)</option>
+        <option class="form-control" value="5">LCHF (20g to 120g carbs)</option>
+        <option class="form-control" value="3">Keto (less than 50g carbs)</option>
+        <option class="form-control" value="1">Carnivore (aka zero carbs)</option>
         </select>
     </div>
     
@@ -56,7 +56,7 @@
    
         <div class="col-md-3 mb-3">
            
-            Units of measurement:
+            Units of measurement:<br>
         <select required name="units">
         <option value="">Select Units</option>    
         <option value="usa">mg/dL (Common for USA)</option>
