--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -27,9 +27,9 @@
         
         <select class="custom-select d-block w-100" name="diet" id="diet" required>
           <option value="">Select Diet</option>
-          <option value="LCHF">LCHF (20g to 120g carbs)</option>
-          <option value="keto">Keto (less than 50g carbs)</option>
-          <option value="zero">Carnivore (aka zero carbs)</option>
+          <option value="5">LCHF (20g to 120g carbs)</option>
+          <option value="3">Keto (less than 50g carbs)</option>
+          <option value="1">Carnivore (aka zero carbs)</option>
         </select>
         
         <select class="custom-select d-block w-100" name="units" id="units" required>
