--- a/templates/topic.html
+++ b/templates/topic.html
@@ -17,8 +17,8 @@
 
 {% block content %}
 <main role="main" class="container-fluid">
-	<div class="row">
-		<div class="col-md-3 p-3 mb-3 bg-light rounded">
+	<div class="row justify-content-start">
+		<div class="col-md-2 p-3 mb-3 bg-light rounded">
             <h4>Latest Messages:</h4>
             {% for message in messages %}
 			<h5><a href="/topic/{{ message[0] }}">{{ message[1] }}</a></h5>
@@ -29,12 +29,15 @@
 		
 			<p></p>
 		</div>
-		<aside class="col-md-9 p-3 mb-3 blog-sidebar">
-			<div class="col-md-5 blog-main">
+		<aside class="col-md-6 p-3 mb-6 blog-sidebar">
+			<div class="col-md-6 blog-main">
 				<h4 class="pb-3 mb-4 border-bottom">
                     
                     Topic
 				</h4>
+				
+				
+				
 				{% for message in topic %}
 				<div class="blog-post">
 					
@@ -44,11 +47,7 @@
 					<hr>
 					
 					{% endfor %} 
-					<form action="/send_reply" method="POST">
-                        <textarea placeholder="Reply" name="content" required rows="2" cols="50"></textarea><p></p>
-                        <input type="submit" value="Submit"> 
-                        <input type="hidden" name="topic_id" value="{{ topic_id }}">
-					</form>	
+					
                     
 					
 					
@@ -56,7 +55,18 @@
 			  </div><!-- /.blog-main -->
 			
 		</aside>
-		
+		<aside class="col-md-2 p-3 mb-3 ">
+			<div class="col-md-2 blog-main">
+				<h4 class="pb-3 mb-4 border-bottom">
+					
+				</h4>
+				<form action="/send_reply" method="POST">
+					<textarea placeholder="Reply" name="content" required rows="4" cols="27"></textarea><p></p>
+					<input type="submit" value="Submit"> 
+					<input type="hidden" name="topic_id" value="{{ topic_id }}">
+				</form>	
+			</div>
+		</aside>
 	</div> <!-- /.row -->
 
 </main><!-- /.container -->
