Info.html added content

--- a/templates/info.html
+++ b/templates/info.html
@@ -1,1 +1,25 @@
-Infoa
+<head>
+    <title>Registering Page</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+</head>
+<body>
+    <section class="hero is-info is-fullheight">
+        <div class="container">
+            <div class="row">
+            <div class="col-6">
+                <div class="column is-full">
+                    <h2>About</h2>
+                    <h5>My name is Matti and I'm Computer Science Student. This is a school project and some of the features in this application are just because 
+                        I needed to meet the requirements of this school assignment.<br>
+                        All the information you receive using this application is purely for entertainment purposes only and can't be considered as a medical advice.</h5>
+                </div>
+            </div>
+
+            </div>
+            
+    </section>
+</body>
