--- a/templates/forum.html
+++ b/templates/forum.html
@@ -23,14 +23,14 @@
 		<div class="col-md-3 p-3 mb-3 bg-light rounded">
 		<h3><a href="/new">Start new conversation</a></h3>
 		<hr>
-			<h3><a href="/edit_posts">Edit posts</a></h3>
+			<h3><a href="/edit_posts">Edit my posts</a></h3>
 		</div><!-- /.blog-post -->
   
 	  
   
 	  <aside class="col-md-9 blog-sidebar">
 		<div class="col-md-8 blog-main">
-			<h3 class="pb-3 mb-4 border-bottom"></h3>
+			<h3 class="pb-3 mb-4"></h3>
 			Latest discussions: 
 		</h3>
 		{% for message in messages %}
