--- a/templates/edit_posts.html
+++ b/templates/edit_posts.html
@@ -23,7 +23,7 @@
 		<div class="col-md-3 p-3 mb-3 bg-light rounded">
 		<h3><a href="/new">Start new conversation</a></h3>
 		<hr>
-			<h3><a href="/edit_posts">Delete my posts</a></h3>
+			<h3><a href="/forum">Forum</a></h3>
 		</div><!-- /.blog-post -->
   
 	  
@@ -31,14 +31,20 @@
 	  <aside class="col-md-9 blog-sidebar">
 		<div class="col-md-8 blog-main">
 			<h3 class="pb-3 mb-4"></h3>
-			Latest discussions: 
+			Latest messages: 
 		</h3>
-		{% for message in messages %}
+		{% for message in lista %}
 		<div class="blog-post">
-		  <h2 class="blog-post-title"><a href="/topic/{{ message[0] }}">{{ message[1] }}</a></h2>
-		  <p class="blog-post-meta">{{ message[4].strftime("%Y-%m-%d %H:%M:%S")  }} From {{ message[2] }}</a></p>
+		  <h2 class="blog-post-title"><a href="/topic/{{ message[4] }}">{{ message[0] }}</a></h2>
+		  <p class="blog-post-meta">{{ message[2]  }} From {{ message[1] }}</a></p>
   
-		  <p>Latest post: {{ message[3]}}<br></p>
+		  <p>Latest post: {{ message[3].strftime("%Y-%m-%d %H:%M:%S") }}<br></p>
+		  <form action="/delete_post" method="POST">
+	
+			<input type="submit" value="Delete"> 
+			<input type="hidden" name="id" value="{{ message[5] }}">
+			<input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+		</form> 
 		  <hr>
 		  {% endfor %}
 			
