--- a/templates/info.html
+++ b/templates/info.html
@@ -1,25 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Registering Page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <title>Info Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<body>
-    <section class="hero is-info is-fullheight">
-        <div class="container">
+<div class="jumbotron mb-0 d-flex align-items-center flex-column justify-content-center min-100" id="header">
+    <h1 class="display-3">Keto Normal</h1>
+    <p>Reference Ranges for Low-Carb People</p>
+    <p class="lead">
+        <a class="btn btn-outline-secondary btn-lg" href="/login" role="button">Login/Register</a>
+    </p>
+</div>
+    <body>
+        
+    <div class="container-fluid text-white" style="background-color: #0398fc;">
+        
+        <div class="container ">
             <div class="row">
-            <div class="col-6">
-                <div class="column is-full">
-                    <h2>About</h2>
-                    <h5>My name is Matti and I'm Computer Science Student. This is a school project and some of the features in this application are just because 
-                        I needed to meet the requirements of this school assignment.<br>
-                        All the information you receive using this application is purely for entertainment purposes only and can't be considered as a medical advice.</h5>
+              <div class="col">
+               
+              </div>
+              <div class="col-6">
+                <h2>About</h2>
+                <h5>My name is Matti and I'm Computer Science Student. This is a school project and some of the features in this application are just because 
+                    I needed to meet the requirements of this school assignment.<br>
+                    All the information you receive using this application is purely for entertainment purposes only and can't be considered as a medical advice.</h5>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 </div>
+              <div class="col">
+                
+              </div>
             </div>
+                
+            </div>
+        </div>
+        </section>
+    </body>
+</div>
 
-            </div>
-            
-    </section>
-</body>
+</html>
