--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
 </div>
 <body>
     <section class="hero is-info is-fullheight">
-<div class="container">
+<div class="container" style="background-color: #0398fc;">
     <div class="columns is-left">
         <div class="column is-one-third is-offset-one-third">
 <form action="/login" method="post">
