--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -1,16 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}My Page{% endblock %}
-{% block navbar %}
-	<li class="nav-item active">
-		<a class="nav-link" href="/submitlabs">Submit Labs</a>
-	</li>
-	<li class="nav-item active">
-		<a class="nav-link" href="/query">Make Queries<span class="sr-only"></span></a>
-	</li>
-	<li class="nav-item active">
-		<a class="nav-link" href="/forum">Forum<span class="sr-only"></span></a>
-	</li>
-{% endblock %}
+
 
 {% block content %}
 <div class="container-fluid">
@@ -162,6 +152,7 @@
 			{% endfor %}
 			<form action="/submitlabs">
 				<input type="submit" value="Submit new lab"> <a href="/submitlabs"></a>
+				<input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 			</form>
 			
 			
