--- a/templates/new.html
+++ b/templates/new.html
@@ -1,18 +1,10 @@
 {% extends "layout.html" %}
 {% block title %}New Post{% endblock %}
-{% block navbar %}
-<li class="nav-item active">
-    <a class="nav-link" href="/mypage">My Page<span class="sr-only"></span></a>
-</li>
-<li class="nav-item active">
-	<a class="nav-link" href="/submitlabs">Submit Labs</a>
-</li>
-<li class="nav-item active">
-	<a class="nav-link" href="/query">Make Queries<span class="sr-only"></span></a>
-</li>
-{% endblock %}
+
 
 {% block content %}
+<div class="container">
+    <div class="col-md-5 p-3 mb-3 bg-light rounded">
 <form action="/send" method="POST">
     <header>
         <h3>Start a new conversation</h3>
@@ -23,10 +15,42 @@
     </p>
     <p>
     What is on your mind?<br>
-    <textarea name="content" required rows="4" cols="50"></textarea>
+    <textarea name="content" required rows="4" cols="48"></textarea>
     </p>
-    <input type="submit" value="Submit"> <a href="/mypage">Back</a>
+    <input type="submit" value="Submit"> <a href="/forum">Back</a>
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     <p>
 </form>
+</div>
+</div>
 {% endblock %}
+<main role="main" class="container">
+	<div class="row">
+		<div class="col-md-3 p-3 mb-3 bg-light rounded">
+		<h3><a href="/new">Start new conversation</a></h3>
+		<hr>
+			<h3><a href="/edit_posts">Delete my posts</a></h3>
+		</div><!-- /.blog-post -->
+  
+	  
+  
+	  <aside class="col-md-9 blog-sidebar">
+		<div class="col-md-8 blog-main">
+			<h3 class="pb-3 mb-4"></h3>
+			Latest discussions: 
+		</h3>
+		{% for message in messages %}
+		<div class="blog-post">
+		  <h2 class="blog-post-title"><a href="/topic/{{ message[0] }}">{{ message[1] }}</a></h2>
+		  <p class="blog-post-meta">{{ message[4].strftime("%Y-%m-%d %H:%M:%S")  }} From {{ message[2] }}</a></p>
+  
+		  <p>Latest post: {{ message[3]}}<br></p>
+		  <hr>
+		  {% endfor %}
+			
+		</div>
+  	  </aside><!-- /.blog-sidebar -->
+  
+	</div><!-- /.row -->
+  
+  </main><!-- /.container -->
