--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
                         </div>    
 
                         <button type="submit" class="btn btn-default">Create account</button> Already have an account? <a href="/login" style="color:#080808;">Login</a>
-
+                        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
                     </form>
             </span>
 </body>
